Code clean up and worked on tests

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,6 @@
 TODO
-* remove deprecated function:
-  - libmsiecf_file_get_item
-  - libmsiecf_file_get_recovered_item
+* complete thread lock support
+
 * pymsiecf
   - add support for leak: Last cache synchronization date and time
 * hash calculation: check what the preceding bytes could be
