--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-libmsiecf is a library to access the Microsoft Internet Explorer (MSIE) Cache File (index.dat) files.
+libmsiecf is a library to access the Microsoft Internet Explorer (MSIE) Cache File (index.dat) file format.
 
 Project information:
 
