--- a/documentation/MSIE Cache File (index.dat) format.asciidoc
+++ b/documentation/MSIE Cache File (index.dat) format.asciidoc
@@ -10,12 +10,10 @@ Analysis of the index.dat file format
 
 The index.dat filename is used by Microsoft Internet Explorer to cache
 different types of information. This specification is based on the work by
-`[JONES03]` and `[CHAPPELL10]` and was complimented by reverse engineering of
-the file format.
+`[JONES03]` and `[CHAPPELL10]` and was enhanced by analyzing test data.
 
-This document is intended as a working document for the MSIE Cache File
-(MSIECF) specification. Which should allow existing Open Source forensic
-tooling to be able to process this file type.
+This document is intended as a working document of the data format specification
+for the libmsiecf project.
 
 [preface]
 == Document information
@@ -32,7 +30,7 @@ tooling to be able to process this file type.
 == License
 
 ....
-Copyright (C) 2009-2020, Joachim Metz <joachim.metz@gmail.com>.
+Copyright (C) 2009-2021, Joachim Metz <joachim.metz@gmail.com>.
 Permission is granted to copy, distribute and/or modify this document under the
 terms of the GNU Free Documentation License, Version 1.3 or any later version
 published by the Free Software Foundation; with no Invariant Sections, no
@@ -63,6 +61,7 @@ in the section entitled "GNU Free Documentation License".
 | 0.0.15 | J.B. Metz | June 2013 | Additional information regarding Download URL record data with thanks to A. Case.
 | 0.0.16 | J.B. Metz | March 2015 | Switched to asccidoc format.
 | 0.0.17 | J.B. Metz | April 2020 | Changes for formatting.
+| 0.0.18 | J.B. Metz | August 2021 | Small changes.
 |===
 
 :numbered:
@@ -120,7 +119,8 @@ This document mainly focuses on MSIECF versions 4.7 and 5.2.
 
 === File types and locations
 
-The History (periodic) in the following sections indicates both the History (daily) and History (weekly) MSIECF file types.
+The History (periodic) in the following sections indicates both the History
+(daily) and History (weekly) MSIECF file types.
 
 ==== MSIE 4 on Windows 98
 
@@ -262,7 +262,8 @@ The History (periodic) in the following sections indicates both the History (dai
 
 === Test version
 
-The following version of programs were used to test the information within this document:
+The following version of programs were used to test the information within this
+document:
 
 * MSIE 4, 5, 6, 7, 8, 9
 
@@ -442,12 +443,15 @@ Some of the record offsets might be still valid
 | 0xdeadbeef | Hash table entry is uninitialized (MSIE 8)
 |===
 
-[yellow-background]*The uninitialized hash table entries can occur in all hash table records not only the last one. Often the hash tables are only filled to offset 0xe00?*
+[yellow-background]*The uninitialized hash table entries can occur in all hash
+table records not only the last one. Often the hash tables are only filled to
+offset 0xe00?*
 
 The valid URL records in the hash table do not refer to all the allocated URL
 records in the file.
 
-[yellow-background]*Maybe the record hash refers to a bucket of records not a single record.*
+[yellow-background]*Maybe the record hash refers to a bucket of records not a
+single record.*
 
 === Record hash flags
 
